fixing non clickable element on iOS devices

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -23,3 +23,7 @@ body{
 .title-container {
   margin-bottom: 30px;
 }
+
+.pointer {
+  cursor: pointer;
+}
